plex-smb/manifests/plex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      runtimeClassName: nvidia
      containers:
    # ===============================================================
    # Plex Server
    # ===============================================================   
      - name: plex
        image: linuxserver/plex:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 32400
          name: plex
        volumeMounts:
        - mountPath: /config
          name: plex-data
        - mountPath: /media
          name: plex-media
        - mountPath: /transcode
          name: plex-transcode
        resources:
          limits:
            nvidia.com/gpu: 1
          requests:
            nvidia.com/gpu: 1
    # ===============================================================
    # SMB Server Sidecar
    # ===============================================================      
      - name: smb
        image: dperson/samba
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh", "/entrypoint/entrypoint.sh"]
        ports:
        - containerPort: 445
          name: smb
        volumeMounts:
        - mountPath: /media
          name: plex-media
        - name: smb-entrypoint
          mountPath: /entrypoint
    # ===============================================================
    # Volumes
    # ===============================================================   
      volumes:
      - name: plex-data
        persistentVolumeClaim:
          claimName: plex-data
      - name: plex-media
        persistentVolumeClaim:
          claimName: plex-media
      - name: plex-transcode
        emptyDir:
          medium: Memory
      - name: smb-entrypoint
        configMap:
          name: plex-smb-entrypoint
          defaultMode: 0755
